--- a/src/main/resources/templates/observation_ohbp.html
+++ b/src/main/resources/templates/observation_ohbp.html
@@ -11,43 +11,48 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded">
     <style>
-    .table {
-      border-collapse: separate;
-      border-spacing: 0 30px;
-      text-justify: center;
-      text-align: center;
-    }
+        .table {
+            border-collapse: separate;
+            border-spacing: 0 30px;
+            text-justfy: center;
+            text-align: center;
+        }
 
-    @keyframes blink {
-      0% {
-        background-color: transparent;
-      }
+        @keyframes blink {
+            0% {
+                background-color: transparent;
+            }
 
-      50% {
-        background-color: red;
-      }
+            50% {
+                background-color: red;
+            }
 
-      100% {
-        background-color: transparent;
-      }
-    }
+            100% {
+                background-color: transparent;
+            }
+        }
 
-    .blink {
-      animation: blink 1s infinite;
-    }
-  </style>
+        .blink {
+            animation: blink 1s infinite;
+        }
+    </style>
     <script>
-    setTimeout(function() {
-      window.location.href = "/redirectToDashboardOhbp";
-    }, 30000);
-  </script>
+        setTimeout(function() {
+            window.location.href = "/redirectToDashboardOhbp";
+        }, 30000);
+    </script>
     <script>
-    function blink() {
-      var elementToBlink = document.getElementById("element-to-blink");
-      elementToBlink.classList.toggle("blink");
-    }
-    var isBlinking = false;
-  </script>
+        function blink() {
+            var elementToBlink = document.getElementById("element-to-blink");
+            elementToBlink.classList.toggle("blink");
+        }
+        var isBlinking = false;
+    </script>
+    <style>
+        tr.hide {
+            display: none;
+        }
+    </style>
 </head>
 
 <body class="container-max-width p-3">
@@ -62,7 +67,7 @@
                     <a class="nav-link mx-2" onclick="window.location.href='/redirectToDashboardOhbp'">OHBP</a>
                 </li>
                 <li class="h4 text-light text-center d-flex flex-grow-1">
-                    <a class="nav-link mx-2" onclick="window.location.href='/redirectToObservationOhbp'">OHBP Opservacija</a>
+                    <a class="nav-link mx-2" onclick="window.location.href='/obs_ohbp'">OHBP Opservacija</a>
                 </li>
                 <li class="h4 text-light text-left d-flex flex-grow-1">
                     <a class="nav-link mx-2" onclick="window.location.href='/patient_page'">Pacijenti</a>
@@ -71,7 +76,7 @@
                     <a class="nav-link mx-2" onclick="window.location.href='/redirectToTriageCategory'">Trijažna kategorija</a>
                 </li>
                 <li class="h4 text-light text-left d-flex flex-grow-1">
-                    <a class="nav-link mx-2" onclick="window.location.href='/redirectToObservationPatients'">Pacijenti opservacija</a>
+                    <a class="nav-link mx-2" onclick="window.location.href='/obs_patients'">Pacijenti opservacija</a>
                 </li>
                 <li class="h4 text-light text-center d-flex">
                     <a class="nav-link mx-2" onclick="window.location.href='/redirectToLegend'">Legenda</a>
@@ -101,129 +106,77 @@
                 <button onclick="blink()">
                     <a> <img src="../ikone/hslucaj.webp" class="img-responsive"></a></button>
             </div>
+
         </div>
-        <hr class="solid">
-    </div>
-</div>
-<div class="" style="">
-    <div class="container-flex">
-        <div id="element-to-blink" class="toggleBlink">
-            <h1 class="text-white p-3 d-flex justify-content-center flex-grow-1 align-items-center">ŽIVOTNO UGROŽENI PACIJENT</h1>
+        <div class="p-3 text-muted border-top"></div>
+        <div class="" style="">
+            <div class="container-flex">
+                <div id="element-to-blink" class="toggleBlink">
+                    <h1 class="text-white p-3 d-flex justify-content-center flex-grow-1 align-items-center">ŽIVOTNO UGROŽENI PACIJENT</h1>
+                </div>
+            </div>
         </div>
-    </div>
-</div>
-<div class="p-3 text-muted border-top">
-    <div class="container-flex">
-        <div class="row d-flex justify-content-between"></div>
-    </div>
-</div>
-<div class="row">
-</div>
-<div class="py-3" style="">
-</div>
-<div class="">
-    <div class="container-flex">
-        <div class="table-responsive">
-            <table class="table table-bordered table-striped">
-                <thead class="thead-dark">
-                <tr class="display: inline-block">
-                    <th class="font-weight-bold text-center d-flex align-items-center">
-                        <h3 class="text-left justify-content-center align-items-center d-flex">Trijažna kategorija</h3>
-                    </th>
-                    <th class="font-weight-bold">
-                        <h3 class=".d-print-table-cell">ID Pacijent</h3>
-                    </th>
-                    <th class="font-weight-bold">
-                        <h3>Ime</h3>
-                    </th>
-                    <th class="font-weight-bold">
-                        <h3>Prezime</h3>
-                    </th>
-                    <th class="font-weight-bold">
-                        <h3>Vrijeme dolaska</h3>
-                    </th>
-                    <th class="font-weight-bold">
-                        <h3>Lokacija</h3>
-                    </th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td class="font-weight-bold" style="background-color:orange">
-                        <h3></h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>#432821</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Ana</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Anić</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>25.02.2023 11:13</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Akutni dio</h3>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="font-weight-bold" style="background-color:yellow">
-                        <h3></h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>#347853</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Ivan</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Horvat</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>25.02.2023 10:53</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Subakutni dio</h3>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="font-weight-bold" style="background-color:yellow">
-                        <h3></h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>#339821</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Marko</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Županić</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>25.02.2023 11:40</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Subakutni dio</h3>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
+        <div class="container">
+            <div class="row p-3">
+                <h1 class="text-center text-primary">Prikaz pacijenta koji se nalaze na odjelu opservacije</h1>
+            </div>
         </div>
-    </div>
-</div>
-<div class="py-3">
-    <div class="container">
+        <div class="p-3 text-muted border-top">
+            <div class="container-flex">
+                <div class="row d-flex justify-content-between"></div>
+            </div>
+        </div>
         <div class="row">
         </div>
-    </div>
-</div>
-<div class="p-3 text-muted border-top">
-    <div class="container-flex">
-        <div class="row d-flex justify-content-between">
-            <div class="col-lg-8 col-md-6">
-                <p class="mb-0"> © OHBP Opća bolnica Zabok i bolnica hrvatskih veterana 2023 || Health IT Akademija 2023</p>
+        <div class="py-3" style="">
+        </div>
+        <div class="">
+            <div class="container-flex">
+                <div class="table-responsive" draggable="true">
+                    <table class="table table-bordered table-striped">
+                        <thead class="thead-dark">
+                        <tr class="display: inline-block">
+                            <th class="font-weight-bold text-center d-flex align-items-center">
+                            </th>
+                        </tr>
+                        </thead>
+                        <thead>
+                        <tr>
+                            <th class="h3">ID</th>
+                            <th class="h3">Ime</th>
+                            <th class="h3">Prezime</th>
+                            <th class="h3">Vrijeme dolaska</th>
+                            <th class="h3">Lokacija</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="CaseOhbp : ${allCases}" th:class="${CaseOhbp.patientObservation == 0} ? 'hide'">
+                            <td th:text="${CaseOhbp.triageCategory}" th:style="'background-color: ' + (${CaseOhbp.triageCategory == 1 ? '#FF0000' : CaseOhbp.triageCategory == 2 ? '#FFA500' : CaseOhbp.triageCategory == 3 ? '#FFFF00' : CaseOhbp.triageCategory == 4 ? '#008000' : '#0000FF'}) + '; color: ' + (${CaseOhbp.triageCategory == 1 ? '#FF0000' : CaseOhbp.triageCategory == 2 ? '#FFA500' : CaseOhbp.triageCategory == 3 ? '#FFFF00' : CaseOhbp.triageCategory == 4 ? '#008000' : '#0000FF'})">
+                            </td>
+                            <td class="h2" th:text="${CaseOhbp.caseID}"></td>
+                            <td class="h2" th:text="${CaseOhbp.patientFirstName}"></td>
+                            <td class="h2" th:text="${CaseOhbp.patientLastName}"></td>
+                            <td class="h2" th:text="${CaseOhbp.timeOfArrival}"></td>
+                            <td class="h2" th:text="${CaseOhbp.patientLocation}"></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="py-3">
+                <div class="container">
+                    <div class="row">
+                    </div>
+                </div>
+            </div>
+            <div class="p-3 text-muted border-top">
+                <div class="container-flex">
+                    <div class="row d-flex justify-content-between">
+                        <div class="col-lg-8 col-md-6">
+                            <p class="mb-0"> © OHBP Opća bolnica Zabok i bolnica hrvatskih veterana 2023 || Health IT Akademija 2023</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
