--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -106,7 +106,7 @@
                             kategorija</a>
                     </li>
                     <li class="h4 text-light text-left d-flex flex-grow-1">
-                        <a class="nav-link mx-2" onclick="window.location.href='/redirectToObservationPatients'">Pacijenti
+                        <a class="nav-link mx-2" onclick="window.location.href='/obs_patients'">Pacijenti
                             opservacija</a>
                     </li>
 
