--- a/src/main/resources/templates/administrator_page.html
+++ b/src/main/resources/templates/administrator_page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.w3.org/1999/xhtml" xmlns:HH="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="utf-8">
@@ -92,10 +92,10 @@
                            onclick="window.location.href='/'">Administrator</a>
                     </li>
                     <li class="h4 text-light text-center d-flex flex-grow-1">
-                        <a class="nav-link mx-2" onclick="window.location.href='/redirectToDashboardOhbp'">OHBP</a>
+                        <a class="nav-link mx-2" onclick="window.location.href='/dashboard_ohbp'">OHBP</a>
                     </li>
                     <li class="h4 text-light text-center d-flex flex-grow-1">
-                        <a class="nav-link mx-2" onclick="window.location.href='/redirectToObservationOhbp'">OHBP
+                        <a class="nav-link mx-2" onclick="window.location.href='/obs_ohbp'">OHBP
                             Opservacija</a>
                     </li>
                     <li class="h4 text-light text-left d-flex flex-grow-1">
@@ -106,7 +106,7 @@
                             kategorija</a>
                     </li>
                     <li class="h4 text-light text-left d-flex flex-grow-1">
-                        <a class="nav-link mx-2" onclick="window.location.href='/redirectToObservationPatients'">Pacijenti
+                        <a class="nav-link mx-2" onclick="window.location.href='/obs_patients'">Pacijenti
                             opservacija</a>
                     </li>
 
@@ -137,8 +137,8 @@
                         <b class="d-flex">Opća bolnica Zabok i bolnica hrvatskih veterana</b></h1>
                 </div>
                 <div class="d-flex align-items-center justify-content-center col-md-2" style="text-align: center;">
-                    <h2 class="text-primary flex-grow-1" style="text-align: center" contenteditable="true">
-                        <b>25.02.2023&nbsp; </b><b>18:20:35&nbsp;</b></h2>
+                    <h2 class="text-primary flex-grow-1" style="text-align: center" contenteditable="true"></h2>
+                       <p>Datum 222 vrijeme</p>
                 </div>
                 <div class="col-md-2 d-flex align-items-center justify-content-end">
                     <button onclick="startBlink()">
