--- a/src/main/resources/templates/observation_patients.html
+++ b/src/main/resources/templates/observation_patients.html
@@ -11,44 +11,49 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded">
     <style>
-    .table {
-      border-collapse: separate;
-      border-spacing: 0 30px;
-      text-justify: center;
-      text-align: center;
-    }
+        .table {
+            border-collapse: separate;
+            border-spacing: 0 30px;
+            text-justfy: center;
+            text-align: center;
+        }
 
-    @keyframes blink {
-      0% {
-        background-color: transparent;
-      }
+        @keyframes blink {
+            0% {
+                background-color: transparent;
+            }
 
-      50% {
-        background-color: red;
-      }
+            50% {
+                background-color: red;
+            }
 
-      100% {
-        background-color: transparent;
-      }
-    }
+            100% {
+                background-color: transparent;
+            }
+        }
 
-    .blink {
-      animation: blink 1s infinite;
-    }
-  </style>
+        .blink {
+            animation: blink 1s infinite;
+        }
+    </style>
     <script>
-    setTimeout(function() {
-      window.location.href = "/redirectToLegend";
-    }, 30000);
-  </script>
+        setTimeout(function () {
+            window.location.href = "/redirectToLegend";
+        }, 30000);
+    </script>
     <script>
-    function blink() {
-      var elementToBlink = document.getElementById("element-to-blink");
-      elementToBlink.classList.toggle("blink");
-    }
-    var isBlinking = false;
-  </script>
-</head>
+        function blink() {
+            var elementToBlink = document.getElementById("element-to-blink");
+            elementToBlink.classList.toggle("blink");
+        }
+
+        var isBlinking = false;
+    </script>
+    <style>
+        tr.hide {
+            display: none;
+        }
+    </style>
 </head>
 
 <body class="container-flex p-4">
@@ -62,7 +67,7 @@
                 </div>
             </div>
             <div class="text-left d-flex justify-content-center col-md-5 align-items-center" style="">
-                <h1 class="text-primary w-100 d-flex justify-content-center text-left align-items-center flex-grow-1" style="">
+                <h1 style="" class="text-primary">
                     <b class="d-flex">Opća bolnica Zabok i bolnica hrvatskih veterana</b></h1>
             </div>
             <div class="d-flex align-items-center justify-content-center col-md-2" style="text-align: center;">
@@ -72,7 +77,7 @@
             <div class="d-flex justify-content-center col-md-2">
                 <h3 class="d-flex align-items-center">
                     <a href="#" title="krevet" style="text-align: center;">
-                        <img src="../ikone/krevet3.webp" class="img-responsive"></a></h3>
+                        <img src="../ikone/krevet_ops.webp" class="img-responsive"></a></h3>
             </div>
         </div>
         <hr class="solid">
@@ -81,89 +86,123 @@
 <div class="row">
     <div class="container-flex"></div>
 </div>
-<div class="">
-    <div class="container-flex">
-        <div class="table-responsive">
-            <table class="table table-bordered table-striped">
-                <thead class="thead-dark">
-                <tr class="display: inline-block">
-                    <th class="font-weight-bold text-center d-flex align-items-center">
-                        <h3 class="text-left justify-content-center align-items-center d-flex">Trijažna kategorija</h3>
-                    </th>
-                    <th class="font-weight-bold">
-                        <h3 class=".d-print-table-cell">ID Pacijent</h3>
-                    </th>
-                    <th class="font-weight-bold">
-                        <h3>Vrijeme dolaska</h3>
-                    </th>
-                    <th class="font-weight-bold">
-                        <h3>Lokacija</h3>
-                    </th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td class="font-weight-bold" style="background-color:orange">
-                        <h3></h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>#432821</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>25.02.2023 11:13</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Akutni dio</h3>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="font-weight-bold" style="background-color:yellow">
-                        <h3></h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>#347853</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>25.02.2023 10:53</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Subakutni dio</h3>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="font-weight-bold" style="background-color:yellow">
-                        <h3></h3>
-                    </td>
-                    <td class="font-weight-bold" >
-                        <h3>#339821</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>25.02.2023 11:40</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Subakutni dio</h3>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-</div>
 <div class="py-3">
     <div class="container">
-        <div class="row">
+        <div class="row p-3">
+            <h1 class="text-center text-primary">Prikaz pacijenta koji se nalaze na odjelu opservacije</h1>
         </div>
     </div>
-</div>
-<div class="p-3 text-muted border-top">
-    <div class="container-flex">
-        <div class="row d-flex justify-content-between">
-            <div class="col-lg-8 col-md-6">
-                <p class="mb-0"> © OHBP Opća bolnica Zabok i bolnica hrvatskih veterana 2023 || Health IT Akademija 2023</p>
+    <div class="p-3 text-muted border-top">
+        <div class="container-flex">
+            <div class="table-responsive" draggable="true">
+                <table class="table table-bordered table-striped">
+                    <thead class="thead-dark">
+                    <tr class="display: inline-block">
+                        <th class="font-weight-bold text-center d-flex align-items-center">
+                        </th>
+                    </tr>
+                    </thead>
+                    <thead>
+                    <tr>
+                        <th class="h3 border-0">Trijažna kategorija</th>
+                        <th class="h3">ID</th>
+                        <th class="h3">Vrijeme dolaska</th>
+                        <th class="h3">Lokacija</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="CaseOhbp : ${allCases}" th:class="${CaseOhbp.patientObservation == 0} ? 'hide'">
+                        <td th:text="${CaseOhbp.triageCategory}"
+                            th:style="'background-color: ' + (${CaseOhbp.triageCategory == 1 ? '#FF0000' : CaseOhbp.triageCategory == 2 ? '#FFA500' : CaseOhbp.triageCategory == 3 ? '#FFFF00' : CaseOhbp.triageCategory == 4 ? '#008000' : '#0000FF'}) + '; color: ' + (${CaseOhbp.triageCategory == 1 ? '#FF0000' : CaseOhbp.triageCategory == 2 ? '#FFA500' : CaseOhbp.triageCategory == 3 ? '#FFFF00' : CaseOhbp.triageCategory == 4 ? '#008000' : '#0000FF'})">
+                        </td>
+                        <td class="h2" th:text="${CaseOhbp.caseID}"></td>
+                        <td class="h2" th:text="${CaseOhbp.timeOfArrival}"></td>
+                        <td class="h2" th:text="${CaseOhbp.patientLocation}"></td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="">
+                <div class="container-flex">
+                    <div class="table-responsive">
+                        <table class="table table-bordered table-striped">
+                            <thead class="thead-dark">
+                            <tr class="display: inline-block">
+                                <th class="font-weight-bold text-center d-flex align-items-center">
+                                    <h3 class="text-left justify-content-center align-items-center d-flex">Trijažna
+                                        kategorija</h3>
+                                </th>
+                                <th class="font-weight-bold">
+                                    <h3 class=".d-print-table-cell">ID Pacijent</h3>
+                                </th>
+                                <th class="font-weight-bold">
+                                    <h3>Vrijeme dolaska</h3>
+                                </th>
+                                <th class="font-weight-bold">
+                                    <h3>Lokacija</h3>
+                                </th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td class="font-weight-bold" style="background-color:orange">
+                                    <h3></h3>
+                                </td>
+                                <td class="font-weight-bold">
+                                    <h3>#432821</h3>
+                                </td>
+                                <td class="font-weight-bold">
+                                    <h3>25.02.2023 11:13</h3>
+                                </td>
+                                <td class="font-weight-bold">
+                                    <h3>Akutni dio</h3>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="font-weight-bold" style="background-color:yellow">
+                                    <h3></h3>
+                                </td>
+                                <td class="font-weight-bold">
+                                    <h3>#347853</h3>
+                                </td>
+                                <td class="font-weight-bold">
+                                    <h3>25.02.2023 10:53</h3>
+                                </td>
+                                <td class="font-weight-bold">
+                                    <h3>Subakutni dio</h3>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="font-weight-bold" style="background-color:yellow">
+                                    <h3></h3>
+                                </td>
+                                <td class="font-weight-bold">
+                                    <h3>#339821</h3>
+                                </td>
+                                <td class="font-weight-bold">
+                                    <h3>25.02.2023 11:40</h3>
+                                </td>
+                                <td class="font-weight-bold">
+                                    <h3>Subakutni dio</h3>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="p-3 text-muted border-top">
+                <div class="container-flex">
+                    <div class="row d-flex justify-content-between">
+                        <div class="col-lg-8 col-md-6">
+                            <p class="mb-0"> © OHBP Opća bolnica Zabok i bolnica hrvatskih veterana 2023 || Health IT
+                                Akademija 2023</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
 </body>
-
 </html>
