preminaovani Broj slučaja u ID administrator_page.html dashboard_ohbp.html observation_patients.html

--- a/src/main/resources/templates/dashboard_ohbp.html
+++ b/src/main/resources/templates/dashboard_ohbp.html
@@ -143,7 +143,7 @@
         <thead>
         <tr>
           <th class="h3">Trijažna kategorija</th>
-          <th class="h3">Broj Slučaja</th>
+          <th class="h3">ID</th>
           <th class="h3">Ime</th>
           <th class="h3">Prezime</th>
           <th class="h3">Vrijeme dolaska</th>
