--- a/src/main/resources/templates/observation_patients.html
+++ b/src/main/resources/templates/observation_patients.html
@@ -121,82 +121,14 @@
                     </tr>
                     </tbody>
                 </table>
-            </div>
-            <div class="">
-                <div class="container-flex">
-                    <div class="table-responsive">
-                        <table class="table table-bordered table-striped">
-                            <thead class="thead-dark">
-                            <tr class="display: inline-block">
-                                <th class="font-weight-bold text-center d-flex align-items-center">
-                                    <h3 class="text-left justify-content-center align-items-center d-flex">Trijažna
-                                        kategorija</h3>
-                                </th>
-                                <th class="font-weight-bold">
-                                    <h3 class=".d-print-table-cell">ID Pacijent</h3>
-                                </th>
-                                <th class="font-weight-bold">
-                                    <h3>Vrijeme dolaska</h3>
-                                </th>
-                                <th class="font-weight-bold">
-                                    <h3>Lokacija</h3>
-                                </th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr>
-                                <td class="font-weight-bold" style="background-color:orange">
-                                    <h3></h3>
-                                </td>
-                                <td class="font-weight-bold">
-                                    <h3>#432821</h3>
-                                </td>
-                                <td class="font-weight-bold">
-                                    <h3>25.02.2023 11:13</h3>
-                                </td>
-                                <td class="font-weight-bold">
-                                    <h3>Akutni dio</h3>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="font-weight-bold" style="background-color:yellow">
-                                    <h3></h3>
-                                </td>
-                                <td class="font-weight-bold">
-                                    <h3>#347853</h3>
-                                </td>
-                                <td class="font-weight-bold">
-                                    <h3>25.02.2023 10:53</h3>
-                                </td>
-                                <td class="font-weight-bold">
-                                    <h3>Subakutni dio</h3>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="font-weight-bold" style="background-color:yellow">
-                                    <h3></h3>
-                                </td>
-                                <td class="font-weight-bold">
-                                    <h3>#339821</h3>
-                                </td>
-                                <td class="font-weight-bold">
-                                    <h3>25.02.2023 11:40</h3>
-                                </td>
-                                <td class="font-weight-bold">
-                                    <h3>Subakutni dio</h3>
-                                </td>
-                            </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-            <div class="p-3 text-muted border-top">
-                <div class="container-flex">
-                    <div class="row d-flex justify-content-between">
-                        <div class="col-lg-8 col-md-6">
-                            <p class="mb-0"> © OHBP Opća bolnica Zabok i bolnica hrvatskih veterana 2023 || Health IT
-                                Akademija 2023</p>
+                <div class="p-3 text-muted border-top">
+                    <div class="container-flex">
+                        <div class="row d-flex justify-content-between">
+                            <div class="col-lg-8 col-md-6">
+                                <p class="mb-0"> © OHBP Opća bolnica Zabok i bolnica hrvatskih veterana 2023 || Health
+                                    IT
+                                    Akademija 2023</p>
+                            </div>
                         </div>
                     </div>
                 </div>
