--- a/src/main/resources/templates/administrator_page.html
+++ b/src/main/resources/templates/administrator_page.html
@@ -164,7 +164,7 @@
 
                 <tr>
                     <th class="h3">Trijažna kategorija</th>
-                    <th class="h3">Broj Slučaja</th>
+                    <th class="h3">ID</th>
                     <th class="h3">Ime</th>
                     <th class="h3">Prezime</th>
                     <th class="h3">Vrijeme dolaska</th>
